<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/fragment_background"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/book_name"
        android:hint="@string/book_name_hint"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:windowSoftInputMode="stateHidden" />

    <LinearLayout
        android:id="@+id/coverLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/previous_cover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_previous_item"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/content_previous_cover" />

        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_cover"
            android:layout_weight="1"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/cover_loading"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="60dp"
            style="@android:style/Widget.ProgressBar.Large.Inverse"
            android:indeterminate="false"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/next_cover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_action_next_item"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/content_next_cover" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_add"
        android:id="@+id/book_add"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

</LinearLayout>