<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/div1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/holo_blue_dark" />

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cover"
        android:scaleType="centerCrop" />


    <View
        android:id="@+id/ad_border_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/holo_blue_dark" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-3446180126620439/6581449147" />

    <View
        android:id="@+id/ad_border_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:visibility="gone"
        android:background="@color/holo_blue_dark" />

    <Spinner
        android:id="@+id/book_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:id="@+id/played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/zeroTime" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/maxTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/zeroTime" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous_song"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/previous_song"
                android:src="@drawable/ic_action_previous" />

            <ImageButton
                android:id="@+id/rewind"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:src="@drawable/av_rewind" />

            <ImageButton
                android:id="@+id/play"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play"
                android:src="@drawable/av_play" />

            <ImageButton
                android:id="@+id/fast_forward"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/forward"
                android:src="@drawable/av_fast_forward" />

            <ImageButton
                android:id="@+id/next_song"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/next_song"
                android:src="@drawable/ic_action_next" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>